# Android_AirPlay

./: README.md
android/example/: build.gradle
android/example/app/: CMakeLists.txt  build.gradle
android/example/app/src/androidTest/java/com/fang/myapplication/: ExampleInstrumentedTest.java
android/example/app/src/main/cpp/: jni_raop_server.cpp
android/example/app/src/main/java/com/fang/myapplication/: MainActivity.java  RaopServer.java
android/example/app/src/main/res/layout/: activity_main.xml
android/example/gradle/wrapper/: gradle-wrapper.properties
lib/: CMakeLists.txt  HHMDNSDriver.cpp  HHMDNSDriver.h  MDNSClient.cpp  MDNSClient.h  airplay.cpp  airplay.h  log.h
lib/common/: common_defines.h
lib/lib/: CMakeLists.txt  byteutils.c  compat.h  crypto.c  crypto.h  dns_sd.h  dnssd.c  dnssd.h  dnssdint.h  fairplay.h  fairplay_playfair.c  global.h  http_request.c  http_request.h  http_response.c  httpd.c  httpd.h  logger.c  logger.h  memalign.h  mirror_buffer.c  netutils.c  netutils.h  pairing.c  pairing.h  raop.c  raop.h  raop_buffer.c  raop_buffer.h  raop_handlers.h  raop_ntp.c  raop_ntp.h  raop_rtp.c  raop_rtp.h  raop_rtp_mirror.c  raop_rtp_mirror.h  stream.h  threads.h  utils.c  utils.h
lib/lib/llhttp/: CMakeLists.txt  llhttp.c
lib/lib/playfair/: CMakeLists.txt
lib/renderers/: audio_renderer.h  audio_renderer_hh.cpp  video_renderer.h  video_renderer_hh.cpp
